dark mode styling fix, bug fix for not saving initial entry title

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --text-color: #000000;
   --sidebar-color: #f2f2f2;
   --entry-item-selected: #ddd;
+  --entry-item-selected-font: #000000;
   --icon-color: #7d7d7d;
 }
 
@@ -14,6 +15,7 @@
   --text-color: #000000;
   --sidebar-color: #f2f2f2;
   --entry-item-selected: #ddd;
+  --entry-item-selected-font: #000000;
   --icon-color: #7d7d7d;
 }
 
@@ -22,6 +24,7 @@
   --text-color: #ffffff;
   --sidebar-color: #2a2a2a;
   --entry-item-selected: #ddd;
+  --entry-item-selected-font: #000000;
   --icon-color: #7d7d7d;
 }
 
@@ -114,6 +117,7 @@ h2 {
 .entry-item {
   position: relative;
 }
+
 .entry-item .entry-menu {
   position: absolute;
   right: 0.5rem;
